files/inception-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inception-deployment
  labels:
    k8s-app: inception-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: inception-deployment
  template:
    metadata:
      labels:
        k8s-app: inception-deployment
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      containers:
      - name: inception-container
        image: katacoda/tensorflow_serving
        imagePullPolicy: IfNotPresent
        command:
        - /bin/sh
        - -c
        args:
        - /serving/bazel-bin/tensorflow_serving/model_servers/tensorflow_model_server
          --port=9000 --model_name=inception --model_base_path=/serving/inception-export
        ports:
        - containerPort: 9000
