files/inception-service.yml
---
apiVersion: v1                                                                                                                        
kind: Service                                                                                                                         
metadata:                                                                                                                             
  labels:                                                                                                                             
    k8s-app: inception-deployment                                                                                                     
  name: inception-deployment                                                                                                          
spec:                                                                                                                                 
  selector:                                                                                                                           
    k8s-app: inception-deployment                                                                                                     
  type: NodePort                                                                                                                      
  ports:                                                                                                                              
  - port: 9000                                                                                                                        
    nodePort: 30000
