files/k8s-tf-nb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tf-app
  labels:
    run: tf-app
spec:
  clusterIP: 10.233.0.145
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 31000
  selector:
    run: tf-app
...
