files/k8s-tf-nb-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tf-ingress
spec:
  backend:
    serviceName: tf-app
    servicePort: 8888
